fix keyboard shortcut display on mobile

--- a/root/static/scss/global.scss
+++ b/root/static/scss/global.scss
@@ -99,6 +99,7 @@ kbd {
 
 table.keyboard-shortcuts td.keys {
     text-align: right;
+    white-space: nowrap;
 }
 
 .strong {
